Header footer fixup (#785)
This fixes the logo not showing, and restores header/footer formatting.

It also removes the header and logo related css from nexthome.css.
So the heights of header and footer are back to their previous dimensions.
The footer markup has been reworded a bit so that it reflows better.
The logo now collapses to just the symbol for narrow screens.
Also, there's now a white version of logo for night mode and sim/test net modes.

--- a/public/css/nexthome.css
+++ b/public/css/nexthome.css
@@ -1,80 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Inconsolata:400,700|Source+Sans+Pro:400,600");
-  header .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 40px; }
-  header .right {
-    display: flex;
-    flex: 1;
-    justify-content: flex-end;
-    align-items: center; }
-    header .right .searchbox {
-      cursor: pointer; }
-      header .right .searchbox img {
-        height: 20px;
-        width: 20px;
-        margin: auto 5px 0px;}
-      header .right .searchbox input {
-        font-family: "Source Sans Pro", sans-serif;
-        border: none;
-        border-bottom: 1px solid #c3cad1;
-        transition: 0.2s ease-out; }
-      header .right .searchbox input.hide {
-        width: 0px !important; }
-    header .right .searchbox.full {
-      width: 95%;
-      flex: 1;
-      margin: 2%; }
-      header .right .searchbox.full input {
-        width: 95%; }
-    header .right .switch {
-      font-size: 14px;
-      font-family: "Source Sans Pro", sans-serif;
-      margin-right: 25px;
-      cursor: pointer;
-      transition: 0.2s linear; }
-      header .right .switch span img {
-        width: 20px;
-        margin: 0px 5px;
-        transition: 0.1s linear; }
-    header .right .switch:hover {
-      opacity: 0.5; }
-      header .right .switch:hover span img {
-        transform: rotate(180deg); }
-    header .right .menu {
-      position: relative;
-      height: 19px;
-      width: 25px;
-      cursor: pointer; }
-      header .right .menu span {
-        position: absolute;
-        transition: 0.1s linear; }
-      header .right .menu span.one {
-        height: 3px;
-        width: 100%;
-        top: 0;
-        background: #17173C; }
-      header .right .menu span.two {
-        height: 3px;
-        width: 100%;
-        top: 8px;
-        background: #17173C; }
-      header .right .menu span.three {
-        height: 3px;
-        width: 60%;
-        bottom: 0px;
-        background: #17173C; }
-    header .right .menu:hover span.one {
-      width: 60%; }
-    header .right .menu:hover span.three {
-      width: 100%; }
-
-*:focus {
-  outline: none !important; }
-
-body {
-  background-color: #F4F6F6; }
 
 .decBlockchainWrapper {
     padding: 60px 0px; }
@@ -295,43 +219,6 @@ body {
     .blockhchainWrapper table#blockchainTable tr.data:hover {
       background: #eeeeee; }
 
-footer {
-  background: white;
-  height: 50px;
-  position: fixed;
-  width: 100%;
-  bottom: 0;
-  font-family: "Source Sans Pro", sans-serif;
-  color: #8997A5;
-  font-size: 12px; }
-  footer .container {
-    display: flex;
-    flex-direction: row;
-    height: 50px;
-    align-items: center;
-    justify-content: space-between; }
-    footer .container p {
-      margin-bottom: 0px; }
-    footer .container .left * {
-      float: left; }
-    footer .container .right {
-      position: relative;
-      padding-right: 17px;
-      display: flex;
-      align-items: center; }
-      footer .container .right span {
-        position: absolute;
-        width: 15px;
-        height: 15px;
-        right: 0px;
-        border-radius: 25px; }
-      footer .container .right span.red {
-        background: red;
-        border: 3px solid #ffcccc; }
-      footer .container .right span.green {
-        background: #0ead8f;
-        border: 3px solid #91f6e3; }
-
 #mainContainer.stats {
   padding: 60px 0px; }
   #mainContainer.stats .title {
@@ -456,25 +343,8 @@ footer {
     margin-right: 3%;
     margin-top: 2%;
     height: 20px; }
-@media (min-width: 1400px) {
-  .container {
-    max-width: 1280px !important; }
-    .container .logo a span {
-      width:120px !important; } }
-@media (min-width: 800px) {
-  header .right .searchbox.full input {
-    flex: 1; }}
-@media (max-width: 600px) {
-  header .right .searchbox input {
-    width: 150px; }}
 
 @media only screen and (max-width: 768px)  {
-  .container {
-    max-width: 85% !important;
-  }
-  .container .logo a span {
-    width:90px !important;
-  }
   .col-md-6 {
     flex: 0 0 50%;
     max-width: 100%;
@@ -490,12 +360,6 @@ footer {
   .networkStatsWrapper .statCard {
     margin-right: 1% !important;
     min-height: fit-content;
-  }
-  .dcr-icon {
-    width: 100px;
-  }
-  .dcr-icon-container {
-    width: 100px;
   }
 }
 
@@ -516,12 +380,6 @@ footer {
     padding-right: 0px;
     padding-left: 0px;
   }
-  .dcr-icon {
-    width: 60px;
-  }
-  .dcr-icon-container {
-    width: 60px;
-  }
   .navbar-fixed-bottom{
     font-size: 12px;
   }
@@ -536,7 +394,3 @@ body.darkBG .container .decBlockchainWrapper .decredblockWrap .decredblock .info
   color: rgba(148, 255, 202, 0.75) !important;}
 input#search {
   background: inherit !important;}
-body header .top-nav .container .logo a span {
-  content:url("/images/themes/light/logo.svg")}
-body.darkBG header .top-nav .container .logo a span {
-  content:url("/images/themes/night/logo.svg")}
